<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margenV"
    android:layout_marginTop="@dimen/margenH"
    android:layout_marginRight="@dimen/margenV"
    android:layout_marginBottom="@dimen/margenH"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margenV"
        android:layout_marginTop="@dimen/margenH"
        android:layout_marginRight="@dimen/margenV"
        android:layout_marginBottom="@dimen/margenH"
        android:text="@string/tituloTER"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descripcionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionTER"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/instruccionesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruccionesTER"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/dosjugadoresButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dosjugadores" />

    <Button
        android:id="@+id/dificultadFacilButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dificultad_facil" />

    <Button
        android:id="@+id/dificultadMediaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dificultad_media" />

</LinearLayout>